test/conformance/chainsaw/mutating-policies/admission/multiple-policies-chaining/patched-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-chaining
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
