test/conformance/chainsaw/mutating-policies/admission/multiple-policies-chaining/pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-chaining
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: test-chaining
spec:
  containers:
  - name: nginx
    image: nginx:latest
